' Generated by UML Generator
' Encoded: hLRTRjCm5BxFK_YofOqqRYkeDYrCgWIeOhj3NBYsbnqjiIlR6OAnX-8PU34S_wHsd524kAdaSxxpdR_FJY-Lnb9tRLEeH-17B76BI8ELkj9Qmg7JR4S4luNl35qK3q0P8Y19muh2ej1r0unhXfuBXCfdGwQ1l20JeZ4LqdlL1W7Nw2rwtQDsrGRT6d9UzoSkseDaiOK8APc8BHGa8mG4Zur7He4AG_qUb7wpjwTjxoZDpyfdNgJqQvIIhr56lUoZQwO_si35CahPcwzjV6Qk0atcSOMftZugTAM6B6cL1leaW7g8pvWMda9EsVDs4c0ePd9s4HJNajLOEeT7Rv0xHZ0jN9AewPSWZ0yOk5N5Qb15QqmBB6iLq9-_1B8XpEMOaTC-b3sh9kBMlWcwj4AHWdP4dzeDvwtXuEmhkf8IVxEkxQ9VVtdFo0CsQ45mKs77ObNb1pBE4ZGJHBUCyriHX9Gd6Gn5X3Nxs8mxNU10DD_Ln1wpABFCO8lWfbtIDLZU2OsRlbGgkaDZcsY5qXBBJqnrBRCg7-tDqrLGWmbs2zIunRz-YeefOjQE8pu_pZGekwn78sOG8MoDPlZ2-EzITzg0olrpTFb0zhQG6-3ZiVpf1eJkRa01yP8cPepi7NywTPKDmy7FpY9d6bGuUB89HAw9-F_SjvgvnJkQNE3y0v2scb_oP5pgpAJElEUkmxGvOzvLAVBldcfFDYeWWHXYg2QY_t7YuVChoj8_dOL_GLyPItY4lCc2mjYAyOqjon_R2RTNxyXxoJWrVnf-0m
' URL: http://www.plantuml.com/plantuml/uml/hLRTRjCm5BxFK_YofOqqRYkeDYrCgWIeOhj3NBYsbnqjiIlR6OAnX-8PU34S_wHsd524kAdaSxxpdR_FJY-Lnb9tRLEeH-17B76BI8ELkj9Qmg7JR4S4luNl35qK3q0P8Y19muh2ej1r0unhXfuBXCfdGwQ1l20JeZ4LqdlL1W7Nw2rwtQDsrGRT6d9UzoSkseDaiOK8APc8BHGa8mG4Zur7He4AG_qUb7wpjwTjxoZDpyfdNgJqQvIIhr56lUoZQwO_si35CahPcwzjV6Qk0atcSOMftZugTAM6B6cL1leaW7g8pvWMda9EsVDs4c0ePd9s4HJNajLOEeT7Rv0xHZ0jN9AewPSWZ0yOk5N5Qb15QqmBB6iLq9-_1B8XpEMOaTC-b3sh9kBMlWcwj4AHWdP4dzeDvwtXuEmhkf8IVxEkxQ9VVtdFo0CsQ45mKs77ObNb1pBE4ZGJHBUCyriHX9Gd6Gn5X3Nxs8mxNU10DD_Ln1wpABFCO8lWfbtIDLZU2OsRlbGgkaDZcsY5qXBBJqnrBRCg7-tDqrLGWmbs2zIunRz-YeefOjQE8pu_pZGekwn78sOG8MoDPlZ2-EzITzg0olrpTFb0zhQG6-3ZiVpf1eJkRa01yP8cPepi7NywTPKDmy7FpY9d6bGuUB89HAw9-F_SjvgvnJkQNE3y0v2scb_oP5pgpAJElEUkmxGvOzvLAVBldcfFDYeWWHXYg2QY_t7YuVChoj8_dOL_GLyPItY4lCc2mjYAyOqjon_R2RTNxyXxoJWrVnf-0m
' Generated on: 2025-11-30T18:37:31.830036500

@startuml
skinparam classAttributeIconSize 0
hide circle

class Cliente {
  -{static} contadorClientes: int = 1
  -ID: String
  -nombre: String
  -correo: String
  -direccion: String
  -pedidos: List<Pedido>
  --
  +Cliente(nombre: String, correo: String, direccion: String)
  +getNombre(): String
  +getCorreo(): String
  +getDireccion(): String
  +getPedidos(): List<Pedido>
  +setNombre(nombre: String): void
  +setCorreo(correo: String): void
  +setDireccion(direccion: String): void
  +setPedidos(pedidos: List<Pedido>): void
  +agregarPedido(pedido: Pedido): void
  +toString(): String
}

class Main {
  +{static} main(args: String[]): void
}

class Pedido {
  -{static} contadorPedidos: int = 1
  -ID: String
  -cliente: Cliente
  -productos: List<Productos> = new ArrayList<>()
  -fecha: LocalDate
  --
  +Pedido(cliente: Cliente)
  +getCliente(): Cliente
  +getProductos(): List<Productos>
  +setCliente(cliente: Cliente): void
  +setProductos(productos: List<Productos>): void
  +agregarProductos(producto: Productos): void
  +calcularTotal(): double
  +mostrarResumen(): void
}

class ProductoDigital {
  -tamañoDescarga: double
  --
  +ProductoDigital(nombre: String, precio: double, tamañoDescarga: double)
  +getTamañoDescarga(): double
  +setTamañoDescarga(tamañoDescarga: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class ProductoFisico {
  -costeEnvio: double
  --
  +ProductoFisico(nombre: String, precio: double, costeEnvio: double)
  +getCosteEnvio(): double
  +setCosteEnvio(costeEnvio: double): void
  +calcularPrecioFinal(): double
  +toString(): String
}

class Productos {
  -{static} contadorId: int = 1
  -nombre: String
  -precio: double
  -ID: String
  --
  +Productos(nombre: String, precio: double)
  +getNombre(): String
  +getPrecio(): double
  +getID(): String
  +setNombre(nombre: String): void
  +setPrecio(precio: double): void
  +setID(iD: String): void
  +calcularPrecioFinal(): double
  +toString(): String
}

Cliente o-- Pedido
Pedido *-- Cliente
Pedido o-- Productos
ProductoDigital --|> Productos
ProductoFisico --|> Productos
@enduml